# pipex

./: Cargo.toml  PUBLISHING.md  README.md  publish.sh
pipex/: Cargo.toml
pipex-macros/: Cargo.toml
pipex-macros/src/: lib.rs
pipex/src/: lib.rs
src/: handlers.rs  lib.rs  macros.rs  main.rs  main.rs 00-27-06-067.rs  result.rs  traits.rs
src/gpu/: mod.rs
src/macros/: mod.rs  pipex.rs
