[package]
name = "pipex"
version = "0.1.13"
edition = "2024"
authors = ["Tarik Sidran <sidrantarik@gmail.com>"]
description = "A powerful functional pipeline macro for Rust combining sync, async, parallel, and streaming operations with extensible error handling"
license = "MIT"
repository = "https://github.com/edransy/pipex"
homepage = "https://github.com/edransy/pipex"
documentation = "https://docs.rs/pipex"
keywords = ["pipeline", "async", "parallel", "functional", "error-handling"]
categories = ["asynchronous", "concurrency", "development-tools", "rust-patterns"]
readme = "README.md"

# Include the proc macro crate in the package
include = [
    "src/**/*",
    "pipex-macros/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE-MIT"
]

[dependencies]
# Proc macro crate dependency - will be bundled when published
pipex-macros = { path = "./pipex-macros", version = "0.1.13" }

# Regular dependencies
futures = { version = "0.3", optional = true }
rayon = { version = "1.7", optional = true }
tokio = { version = "1.0", features = ["full"], optional = true }
async-trait = { version = "0.1", optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-test = "0.4"
criterion = "0.5"

[features]
default = ["async", "parallel"]
async = ["futures", "tokio", "async-trait"]
parallel = ["rayon"]
full = ["async", "parallel"]
