[package]
name = "pipex"
version = "0.1.14"
edition = "2021"
authors = ["Tarik Sidran <sidrantarik@gmail.com>"]
description = "A powerful functional pipeline macro for Rust combining sync, async, parallel, and streaming operations with extensible error handling"
license = "MIT"
repository = "https://github.com/edransy/pipex"
homepage = "https://github.com/edransy/pipex"
documentation = "https://docs.rs/pipex"
keywords = ["pipeline", "async", "parallel", "functional", "error-handling"]
categories = ["asynchronous", "concurrency", "development-tools", "rust-patterns"]
readme = "README.md"

# Include the proc macro crate in the package
include = [
    "src/**/*",
    "pipex-macros/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE-MIT"
]

[dependencies]
# Proc macro crate dependency - will be bundled when published
pipex-macros = { path = "./pipex-macros", version = "0.1.14" }

[dev-dependencies]
criterion = "0.5"
