[package]
name = "pipex"
version = "0.2.0"
edition = "2021"
authors = ["Tarik Sidran <sidrantarik@gmail.com>"]
description = "A powerful functional pipeline macro for Rust combining sync, async, parallel, and streaming operations with extensible error handling"
license = "MIT"
repository = "https://github.com/edransy/pipex"
homepage = "https://github.com/edransy/pipex"
documentation = "https://docs.rs/pipex"
keywords = ["pipeline", "async", "parallel", "functional", "error-handling"]
categories = ["asynchronous", "concurrency", "development-tools", "rust-patterns"]
readme = "../README.md"
exclude = ["target/", ".git/", ".DS_Store"]

[dependencies]
# Import the proc macro crate
pipex-macros = { path = "../pipex-macros", version = "0.2.0" }

# Regular dependencies
futures = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-test = "0.4"
criterion = "0.5"

[features]
default = ["async", "parallel"]
async = ["futures", "tokio", "async-trait"]
parallel = ["rayon"]
full = ["async", "parallel"]
